--- a/index.html
+++ b/index.html
@@ -1479,11 +1479,13 @@ padding-right: 10px; /* Espaço para a barra de rolagem */
           <button id="btnVipPro" onclick="abrirModalVipPro()" style="width:92%; background: linear-gradient(45deg, var(--cor-destaque-azul), #00c6ff);">🌟 Seja PRO (R$ 29,99/mês)</button>
         </div>
     </div>
-     <hr style="border-color: var(--cor-borda); margin: 20px 0;">
-    <div style="text-align:center;margin-top:20px;margin-bottom:15px; border-top: 1px solid var(--cor-borda); padding-top: 15px;">
-        <button id="btnMostrarFavoritos" onclick="toggleFavoritos()" style="background: transparent; border: 1px solid var(--cor-borda); width: auto; font-size: 1.2em; padding: 8px 20px;"> ♡ Mostrar Favoritos </button>
+    <hr style="border-color: var(--cor-borda); margin: 20px 0;">
+    <div style="display: flex; justify-content: center; margin: 10px 0;">
+        <button id="btnFiltroFavoritos" onclick="alternarFiltroFavoritos()" style="background: transparent; border: 1px solid var(--cor-borda); width: auto; font-size: 1.2em; padding: 8px 20px;">
+            ♡ Mostrar Favoritos
+        </button>
     </div>
-    <div id="listaBarbeirosPrincipalBarbeiro" class="barbeiro-list-container"></div>
+<div id="listaBarbeirosPrincipalCliente" class="barbeiro-list-container"></div>
   </div>
 
   <div id="adminView" class="hidden card">
