--- a/index.html
+++ b/index.html
@@ -4448,11 +4448,8 @@ function carregarBarbeirosPrincipal(barbeiros) {
     barbeiros.forEach(barbeiro => {
         // --- CORREÇÃO AQUI ---
         // Escapa aspas duplas (") para \" E aspas simples (') para \'
-        const barbeiroDataSafe = JSON.stringify(barbeiro)
-            .replace(/\\/g, '\\\\') // Escapa barras invertidas
-            .replace(/"/g, '\\"')   // Escapa aspas duplas para o JSON.parse
-            .replace(/'/g, "\\'");  // Escapa aspas simples para o HTML onclick
-        // ---------------------
+        // Codifica o objeto para uma string segura para HTML
+const barbeiroSafe = encodeURIComponent(JSON.stringify(barbeiro));
 
         let statusTexto = barbeiro.status || 'Manual';
         let statusClass = 'status-manual';
@@ -4489,7 +4486,7 @@ function carregarBarbeirosPrincipal(barbeiros) {
         
         const cardHTML = `
             <div class="card barbeiro-card"
-                 onclick='abrirModalBarbeiro(JSON.parse("${barbeiroDataSafe}"))'>
+                 onclick='abrirModalBarbeiro(JSON.parse(decodeURIComponent("${barbeiroSafe}")))'
                 
                 <button class="share-btn" onclick="event.stopPropagation(); compartilharBarbeiro('${barbeiro.nome.replace(/'/g, '\\\'')}')">
                     <i class="fas fa-share-alt"></i>
@@ -4593,11 +4590,11 @@ async function abrirBarbeiroPerfil(barbeiroUid, isGuest = false) {
                 }
 
                 // CORREÇÃO AQUI: Substituir aspas simples por escapadas
-                const servicoJSON = JSON.stringify(s).replace(/'/g, "\\'");
+                const servicoSafe = encodeURIComponent(JSON.stringify(s));
                 const promoInfo = promoAplicada ? `<p style="font-size: 11px; color: var(--cor-destaque); margin: 2px 0 0 0;">🎁 ${promoAplicada.nome} (${promoAplicada.desconto}% OFF)</p>` : '';
 
                 servicosList.innerHTML += `
-                    <div class="selectable-item" onclick='selecionarServico(this, ${servicoJSON})'>
+                    <div class="selectable-item" onclick='selecionarServico(this, JSON.parse(decodeURIComponent("${servicoSafe}")))' 
                         ${s.nome} - ${precoHtml}${s.duracao ? ` - ${s.duracao} min` : ''}
                         ${promoInfo}
                     </div>`;
@@ -8910,9 +8907,9 @@ async function carregarProdutos() {
 
         produtosSnap.forEach(doc => {
             const produto = { ...doc.data(), id: doc.id };
-            const produtoJSON = JSON.stringify(produto).replace(/'/g, "\\'");
+            const produtoSafe = encodeURIComponent(JSON.stringify(produto));
             if (produto.isOficial) {
-                officialHtml += renderProdutoCard(produto, produtoJSON);
+                officialHtml += renderProdutoCard(produto, produtoSafe);
                 officialProductsFound = true;
             } else {
                 communityProducts.push({ data: produto, json: produtoJSON });
@@ -8966,7 +8963,7 @@ function renderProdutoCard(p, pJson) {
     // LÓGICA PREMIUM ADICIONADA
     if (p.isPremium) {
         return `
-            <div class="produto-premium" onclick='handleProdutoClick(${pJson})'>
+            <div class="produto-premium" onclick='handleProdutoClick(JSON.parse(decodeURIComponent("${pSafe}")))'>
                 <img src="${imageUrlPrincipal || placeholder}" alt="${p.nome}" onerror="this.onerror=null; this.src='${placeholder}';">
                 <div class="produto-info">
                     <div class="produto-nome">💎 ${p.nome}</div>
@@ -8979,7 +8976,7 @@ function renderProdutoCard(p, pJson) {
 
     // Card Comum
     return `
-        <div class="produto-card" onclick='handleProdutoClick(${pJson})'>
+        <div class="produto-card" onclick='handleProdutoClick(JSON.parse(decodeURIComponent("${pSafe}")))'>
             <img src="${imageUrlPrincipal || placeholder}" alt="${p.nome}" onerror="this.onerror=null; this.src='${placeholder}';">
             <div class="produto-info">
                 <div class="produto-nome">${p.nome}</div>
