--- a/index.html
+++ b/index.html
@@ -377,12 +377,6 @@
       left: 12px;
       z-index: 15;
     }
-    #btnChat {
-      position: fixed;
-      bottom: 12px;
-      right: 12px;
-      z-index: 15;
-    }
     #btnTema {
       font-size: 18px; /* Ajuste aqui */
       background: none;
@@ -1519,7 +1513,53 @@ padding-right: 10px; /* Espaço para a barra de rolagem */
 #btnSair { position: static !important; margin: 0 !important; }
 #btnDenuncia { position: static !important; margin: 0 !important; }
 /* Botão Chat Fixo na Direita */
-#btnChat { position: fixed; bottom: 12px; right: 12px; z-index: 15; }
+/* === CORREÇÃO BOTÃO CHAT (RESGATE) === */
+#btnChat {
+    position: fixed !important;
+    bottom: 20px !important;
+    right: 20px !important;
+    left: auto !important; /* Garante que não fique na esquerda */
+    z-index: 1000 !important; /* Z-index altíssimo para ficar acima de tudo */
+    display: flex !important;
+    align-items: center;
+    justify-content: center;
+    
+    /* Estilo Visual para garantir visibilidade */
+    background-color: rgba(0, 0, 0, 0.6) !important; /* Fundo escuro translúcido */
+    border: 1px solid var(--cor-destaque) !important; /* Borda na cor do tema */
+    border-radius: 50% !important;
+    width: 50px !important;
+    height: 50px !important;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.5) !important;
+    
+    /* Texto/Emoji */
+    font-size: 24px !important;
+    line-height: 1 !important;
+    padding: 0 !important;
+    margin: 0 !important;
+    cursor: pointer;
+}
+
+/* Garante que o emoji dentro não seja afetado por outros estilos */
+#btnChat span {
+    pointer-events: none;
+    display: block;
+}
+
+/* Ajuste da bolinha de notificação */
+.notification-badge {
+    position: absolute !important;
+    top: -5px !important;
+    right: -5px !important;
+    background-color: red !important;
+    color: white !important;
+    border-radius: 50%;
+    padding: 2px 6px;
+    font-size: 10px;
+    font-weight: bold;
+    border: 2px solid #fff;
+    z-index: 1001;
+}
 
 /* Botão Admin Premium */
 .btn-admin-premium {
@@ -1598,14 +1638,6 @@ body {
     gap: 15px !important;
     z-index: 99;
     align-items: center;
-}
-
-/* Botão flutuante do Chat (Direita) */
-#btnChat {
-    position: fixed !important;
-    bottom: 20px !important;
-    right: 20px !important;
-    z-index: 99;
 }
 
 /* 6. Ajuste do Painel Admin (Botões cortados) */
