--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8">
@@ -12353,4 +12354,3 @@ loginFields.forEach(field => {
 </script>
 </body>
 </html>
-
