--- a/index.html
+++ b/index.html
@@ -1935,6 +1935,7 @@ body {
           <button onclick="abrirClientesBarbeiro()" style="width:45%">🧑‍🤝‍🧑 Clientes</button>
           <button onclick="abrirPromocoes()" style="width:45%">🎁 Promoções</button>
           <button onclick="abrirModal('modalCarteira')" style="width:45%">💰 Carteira</button>
+          <button onclick="abrirModalFidelidade()" style="width:45%">🏆 Fidelidade</button>
           <button onclick="abrirHistoricoBarbeiro()" style="width:45%">📜 Histórico</button>
           <button id="btnAvaliacoesBarbeiro" onclick="abrirAvaliacoesBarbeiro()" style="width:45%">⭐ Avaliações</button>
           <button onclick="abrirModalPortfolioBarbeiro()" style="width:45%">🖼️ Portfólio</button>
